# damszew.github.io

./: .gitignore  .gitlab-ci.yml  404.html  CNAME  Cargo.toml  Gemfile  LICENSE  LICENSE.md  Makefile.toml  README.md  _config.yml  about.markdown  about.md  atom.xml  config.toml  flake.nix  index.html  index.markdown  main.css  module.nix  robots.txt  sitemap.xml  styles.css
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
_data/: defaults.yml  navigation.yml  sitetext.yml
_drafts/: 2021-12-26-ddd-a-path-to-clean-and-testable-code.md  2022-01-01-helm-test-in-practise.md
_includes/: about.html
_layouts/: home.html
_portfolio/: first-open-source-contribution copy.md  personal-web-page.md  rusty-cucumber.md  tdd-is-a-skill.md
_posts/: 2020-01-01-personal-web-page.md  2020-01-02-first-open-source-contribution copy.md  2020-01-03-tdd-is-a-skill.md  2020-01-04-rusty-cucumber.md  2021-09-08-what-is-a-tdd-in-practice.md  2021-11-24-coding-dojo-avoid-brittle-tests-by-writing-better-assertions.md  2022-07-14-tdd-styles-classicist-and-mockist.md
about/: index.html
assets/: home_banner.xcf
blog/: index.html
blog/balanding-unit-and-integration-tests-how-project-matiruty-shapes-the-ratio/: index.html
blog/coding-dojo-avoid-brittle-tests-by-writing-better-assertions/: index.html
blog/tdd-is-a-single-tool-not-a-whole-toolbox/: index.html
blog/tdd-styles-classicist-and-mockist/: index.html
blog/types-dont-just-describe-your-code-they-test-it-too/: index.html
content/: _index.md
pkg/: README.md  package.d.ts  package.js  package.json  package_bg.d.ts  package_bg.wasm  package_bg.wasm.d.ts
src/: api.rs  app.rs  lib.rs  route.rs  types.rs
static/: posts.json  styles.css
style/: styles.css  tailwind.config.js
tags/: index.html
(+28 files in other folders)
