[package]
name = "damszew_gitlab_io"
version = "0.1.0"
authors = ["Damian Szewczyk <damian.szewczyk111@gmail.com>"]
edition = "2018"
description = "Personal web page for presenting pet projects"
repository = "https://gitlab.com/damszew/damszew.gitlab.io"
license = "MIT"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.67"
yew = "0.17.3"
yew-router = "0.14.0"
comrak = "0.8.2"
anyhow = "1.0.32"
serde = { version = "1.0.116", features = ["derive"] }

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
