[package]
name = "damszew_github_io"
version = "0.1.0"
authors = ["Damian Szewczyk <damian.szewczyk111@gmail.com>"]
edition = "2018"
description = "Personal web page for presenting pet projects"
repository = "https://github.com/damszew/damszew.github.io"
license = "MIT"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.74"
yew = "0.18.0"
yew-router = "0.15.0"
comrak = "0.12.0"
anyhow = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
